--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
-    <string name="app_name">Project454</string>
+    <string name="app_name">WiscoTrail</string>
     <color name="black">#000000</color>
     <color name="lime">#00FF00</color>
     <color name="almost_white">#eeeeee</color>
+
 
 </resources>
