picture for travel animation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <color name="black">#000000</color>
     <color name="lime">#00FF00</color>
     <color name="almost_white">#eeeeee</color>
+    <color name="white">#ffffff</color>
 
     <!-- SharedPreferences -->
 
